--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,7 @@ ClientBin
 Generated_Code #added for RIA/Silverlight projects
 *.disposechecksettings
 [Pp]ackages/
+PrecompiledWeb/
 
 # Backup & report files from converting an old project file to a newer
 # Visual Studio version. Backup files are not needed, because we have git ;-)
